--- a/package.json
+++ b/package.json
@@ -22,54 +22,60 @@
   ],
   "keywords": [],
   "dependencies": {
-    "axios": "^1.6.7",
-    "immer": "^10.0.3",
-    "media-icons": "^0.10.0",
-    "plyr-react": "^5.3.0",
-    "react-icons": "^5.0.1",
-    "react-player": "^2.14.1",
-    "swiper": "^11.0.6",
-    "vidstack": "^0.6.14"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@wordpress/blob": "^3.51.0",
-    "@wordpress/block-editor": "^12.19.1",
-    "@wordpress/blocks": "^12.28.1",
-    "@wordpress/components": "^26.0.1",
-    "@wordpress/compose": "^6.28.0",
-    "@wordpress/data": "^9.21.0",
-    "@wordpress/element": "^5.28.0",
-    "@wordpress/html-entities": "^3.51.0",
-    "@wordpress/i18n": "^4.51.0",
-    "@wordpress/rich-text": "^6.28.1",
-    "@wordpress/server-side-render": "^4.28.1",
-    "autostorefinder": "^10.4.17",
-    "babel-loader": "^9.1.3",
-    "browser-sync": "^3.0.2",
-    "browserslist": "^4.22.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.10.0",
-    "css-minimizer-webpack-plugin": "^6.0.0",
-    "del": "^7.1.0",
-    "eslint": "^8.56.0",
-    "eslint-config-node": "^4.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "file-loader": "^6.2.0",
-    "gulp": "^4.0.2",
-    "gulp-zip": "^6.0.0",
-    "mini-css-extract-plugin": "^2.8.0",
-    "node-sass": "^9.0.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^8.1.0",
-    "sass-loader": "^14.1.0",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4"
-  }
+		"@lottiefiles/lottie-player": "^1.5.7",
+		"immer": "^9.0.19",
+		"plyr-react": "^5.3.0",
+		"react-bootstrap": "^2.7.2",
+		"react-countdown-circle-timer": "^3.0.9",
+		"react-image-gallery": "^1.2.11",
+		"react-responsive-masonry": "^2.1.7",
+		"react-sortable-hoc": "^2.0.0",
+		"react-video-thumbnail": "^0.1.3",
+		"select-pure": "^0.6.3",
+		"swiper": "^8.2.6"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.18.6",
+		"@babel/preset-env": "^7.18.6",
+		"@babel/preset-react": "^7.18.6",
+		"@wordpress/blob": "^3.12.0",
+		"@wordpress/block-editor": "^9.4.0",
+		"@wordpress/blocks": "^11.11.0",
+		"@wordpress/components": "^19.14.0",
+		"@wordpress/compose": "^5.10.0",
+		"@wordpress/data": "^6.12.0",
+		"@wordpress/element": "^4.10.0",
+		"@wordpress/html-entities": "^3.12.0",
+		"@wordpress/i18n": "^4.12.0",
+		"@wordpress/rich-text": "^5.10.0",
+		"@wordpress/server-side-render": "^3.11.0",
+		"autoprefixer": "^10.4.7",
+		"babel-loader": "^8.2.5",
+		"browser-sync": "^2.27.10",
+		"browserslist": "^4.21.1",
+		"clean-webpack-plugin": "^4.0.0",
+		"css-loader": "^6.7.1",
+		"css-minimizer-webpack-plugin": "^4.0.0",
+		"del": "^6.1.1",
+		"eslint": "^8.18.0",
+		"eslint-config-node": "^4.1.0",
+		"eslint-plugin-jsx-a11y": "^6.6.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-webpack-plugin": "^3.2.0",
+		"file-loader": "^6.2.0",
+		"gulp": "^4.0.2",
+		"gulp-zip": "^5.1.0",
+		"mini-css-extract-plugin": "^2.6.1",
+		"node-sass": "^7.0.1",
+		"npm-run-all": "^4.1.5",
+		"postcss-loader": "^7.0.0",
+		"sass-loader": "^13.0.2",
+		"webpack": "^5.73.0",
+		"webpack-cli": "^4.10.0"
+	},
+	"browserslist": [
+		"> 1% or last 5 versions"
+	]
 }
